--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -17,7 +17,7 @@
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/hoitro-style-config.css">
     <link rel="stylesheet" href="~/Content/css/hoitro-style.css">
-    <link rel="stylesheet" href="~/Content/css/style_room.css">
+    @*<link rel="stylesheet" href="~/Content/css/style_room.css">*@
     <link rel="stylesheet" href="~/Content/css/style_dangtin.css">
     <link rel="stylesheet" href="~/Content/css/style_signinsignout.css">
     <!-- Responsive-->
@@ -55,6 +55,7 @@
         </div>
     </div>
     <!-- end logo và đăng ký, đăng nhập -->
+
     <!-- phần navigation bar -->
     <div id="menu-bar">
         @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
