--- a/Content/css/hoitro-style.css
+++ b/Content/css/hoitro-style.css
@@ -294,17 +294,35 @@
 
 /* List phòng trọ */
 
+.left-content, .right-content section {
+    border: 1px solid #dedede;
+    box-sizing: border-box;
+    background-color: #fff
+}
+
+.left-content {
+    border-radius: 8px;
+}
+
+.right-content {
+    position: sticky;
+    top: 60px;
+}
+
 .category-section {
+    border-bottom: 1px solid #dedede;
     padding-top: 20px;
 }
 
 .category-section .category-title {
+    position: relative;
     text-transform: uppercase;
+    padding-left: 18px;
 }
 
 .category-section .category-title a::before {
     position: absolute;
-    left: 2px;
+    left: 5px;
     content: "";
     background-color: #ff0909;
     width: 20px;
@@ -326,8 +344,8 @@
 .post-list .post-item.vipnoibat {
     z-index: 5;
     background-color: #fff9f3;
-    margin-left: -20px;
-    margin-right: -20px;
+/*    margin-left: -20px;
+    margin-right: -20px;*/
     padding: 5px 10px 10px 10px;
 }
 
@@ -473,6 +491,103 @@ figure img {
     /* float: right; */
 }
 
+.post-listing .post-item .btn-quick-call:hover,
+.post-listing .post-item .btn-quick-zalo:hover {
+    background-color: #1266dd;
+    color: #fff;
+}
+
+.post-listing.grid {
+    padding-top: 0;
+    padding-bottom: 10px;
+    background-color: #fff;
+}
+
+    .post-listing.grid::-webkit-scrollbar {
+        display: none;
+    }
+
+    .post-listing.grid .inner {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .post-listing.grid .post-item {
+        width: 50%;
+        margin-top: 10px;
+        margin-right: 0;
+        padding: 10px;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        margin-left: 0;
+        display: inline-flex;
+    }
+
+        .post-listing.grid .post-item:nth-of-type(1),
+        .post-listing.grid .post-item:nth-of-type(2) {
+            margin-top: 0;
+        }
+
+        .post-listing.grid .post-item:nth-of-type(2n) {
+            margin-right: 0;
+        }
+
+        .post-listing.grid .post-item .post-location,
+        .post-listing.grid .post-item .post-summary,
+        .post-listing.grid .post-item .post-time {
+            float: none;
+            display: block;
+            font-size: 0.95rem;
+        }
+
+        .post-listing.grid .post-item .post-acreage {
+            line-height: 19px;
+        }
+
+.post-listing.aside .post-item {
+    padding: 10px 0;
+    margin: 0;
+    border: 0;
+    border-bottom: 1px solid #eee;
+}
+
+    .post-listing.aside .post-item a {
+        display: flex;
+    }
+
+    .post-listing.aside .post-item:last-of-type {
+        border-bottom: 0;
+    }
+
+    .post-listing.aside .post-item figure {
+        width: 65px;
+        height: 65px;
+        margin: 0 !important;
+    }
+
+    .post-listing.aside .post-item .post-price {
+        font-size: 1rem;
+        margin-bottom: 0;
+    }
+
+    .post-listing.aside .post-item .post-title {
+        font-size: 1rem;
+        font-weight: normal;
+        line-height: 1.3;
+    }
+
+    .post-listing.aside .post-item.vipnoibat .post-title {
+        padding-right: 22px;
+    }
+
+    .post-listing.aside .post-item .post-time {
+        font-size: 0.9rem;
+        margin-bottom: 0;
+    }
+
+/*  */
+
 .clearfix::after {
     visibility: hidden;
     display: block;
@@ -486,8 +601,8 @@ figure img {
 
 .section {
     margin-bottom: 20px;
-    margin-left: 15px;
-    padding: 20px 10px 20px 20px;
+    margin-left: 5px;
+    padding: 15px 10px 20px 15px;
     background-color: #fff;
     border: 1px solid #dedede;
     border-radius: 8px;
