--- a/Views/HomePage/getInfor.cshtml
+++ b/Views/HomePage/getInfor.cshtml
@@ -11,7 +11,7 @@
                 <img class="img-thumb"
                      src="@i.ImagePath"
                      @*data-src="https://pt123.cdn.static123.com/images/thumbs/450x300/fit/2024/03/29/2_1711684797.jpg"*@
-                     alt="@i.RoomInfo.title" />
+                     alt="@i.RoomInfo.title">
             </a>
             <span class="images-number">14 ảnh</span>
             <span class="has-video"></span>
@@ -41,14 +41,13 @@
             </div>
             <div class="meta-row clearfix">
                 <div class="post-author">
-                    <img src="" />
+                    <img src="" alt="@i.RoomInfo.nameInfor">
                     <span class="author-name">@i.RoomInfo.nameInfor</span>
                 </div>
                 <a rel="nofollow" target="_blank" href="https://zalo.me/@i.RoomInfo.zaloInfor"
                    class="btn-quick-zalo">Nhắn Zalo</a>
                 <a rel="nofollow" target="_blank" href="tel:@i.RoomInfo.phoneInfor" class="btn-quick-call">
-                    Gọi
-                    @i.RoomInfo.phoneInfor
+                    Gọi @i.RoomInfo.phoneInfor
                 </a>
             </div>
         </div>
