--- a/Views/HomePage/getRoomType.cshtml
+++ b/Views/HomePage/getRoomType.cshtml
@@ -4,22 +4,10 @@
 {
     <section class="category-section">
         <div class="category-title h4">
-            <a href="@ViewBag.meta/@i.meta">@i.title"</a>
+            <a href="@ViewBag.meta/@i.meta">@i.title</a>
         </div>
         <ul class="post-list">
-            @Html.Action("getInfor", "HomePage", new { id = @i.id, metatitle = @ViewBag.meta })
-        </ul>
-    </section>
-}
-<!-- end our_room -->
-@foreach (var i in Model)
-{
-    <section class="category-section">
-        <div class="category-title h4">
-            <a href="javascript:void(0)">@i.title</a>
-        </div>
-        <ul class="post-list">
-            @{ Html.RenderAction("GetRoomInfo", "HomePage", new { id = @i.id, metatitle = ViewBag.meta }); }
+            @{ Html.RenderAction("GetRoomInfo", "HomePage", new { id = @i.id, metatitle = @ViewBag.meta }); }
         </ul>
     </section>
 }
