--- a/Views/RoomInfo/RoomDetail.cshtml
+++ b/Views/RoomInfo/RoomDetail.cshtml
@@ -98,15 +98,15 @@
                 <tbody>
                     <tr>
                         <td class="name">Liên hệ:</td>
-                        <td> @Model.nameInfor </td>
+                        <td> @Model.Account.name </td>
                     </tr>
                     <tr>
                         <td class="name">Điện thoại:</td>
-                        <td> @Model.phoneInfor </td>
+                        <td> @Model.Account.phoneNum </td>
                     </tr>
                     <tr>
                         <td class="name">Zalo</td>
-                        <td> @Model.zaloInfor </td>
+                        <td> @Model.Account.zaloNum </td>
                     </tr>
                 </tbody>
             </table>
